# ethrex

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.sp1  README.md  benchmark_zk.sh  run_verifier_unit_tests.sh  test_local_devnet.sh
crates/blockchain/: Cargo.toml  blockchain.rs  mempool.rs  tracing.rs  zk.rs
crates/blockchain/metrics/l2/: metrics.rs
crates/common/: Cargo.toml
crates/common/types/: block_access_list.rs  genesis.rs  l2.rs  mod.rs  transaction.rs  zk.rs
crates/common/types/l2/: batch.rs  tokamak_fee_config.rs
crates/desktop-app/ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/desktop-app/ui/src-tauri/src/: ai_provider.rs  appchain_manager.rs  commands.rs  deployment_db.rs  lib.rs  pilot_memory.rs  telegram_bot.rs  unified_state.rs
crates/guest-program/: BRIDGE_GUEST_PROGRAM_DESIGN.md  Cargo.toml  GUEST_PROGRAM_GUIDE.md  Makefile  build.rs
crates/guest-program/src/: lib.rs  traits.rs
crates/guest-program/src/common/: app_execution.rs  app_state.rs  app_types.rs  incremental_mpt.rs  input_converter.rs  mod.rs
crates/guest-program/src/common/handlers/: constants.rs  deposit.rs  eth_transfer.rs  gas_fee.rs  mod.rs  system_call.rs  withdrawal.rs
crates/guest-program/src/l1/: output.rs
crates/guest-program/src/l2/: mod.rs  output.rs
crates/guest-program/src/programs/: dynamic.rs  evm_l2.rs  mod.rs  tokamon.rs  zk_dex.rs
crates/guest-program/src/programs/bridge/: analyze.rs  circuit.rs  mod.rs
crates/guest-program/src/programs/tokamon/: execution.rs  mod.rs  types.rs
crates/guest-program/src/programs/zk_dex/: DEV.md  circuit.rs  events.rs  execution.rs  mod.rs  notes.rs  orders.rs  storage.rs  types.rs
crates/halo2-dex/: Cargo.toml
crates/halo2-dex/data/: dex_transfer.in
crates/halo2-dex/src/: main.rs
crates/halo2-dex/src/circuits/: ecdsa.rs  mod.rs  storage.rs  transfer.rs
crates/l2/common/: Cargo.toml
crates/l2/common/src/: lib.rs  prover.rs
crates/l2/prover/: Cargo.toml  programs.example.toml
crates/l2/prover/src/: config.rs  lib.rs  programs_config.rs  prover.rs  registry.rs
crates/l2/prover/src/backend/: error.rs  exec.rs  mod.rs  openvm.rs  risc0.rs  sp1.rs  tokamak.rs  zisk.rs
crates/l2/prover/tests/: zkvm_integration.rs
crates/networking/rpc/: Cargo.toml  rpc.rs  test_utils.rs  utils.rs
crates/networking/rpc/debug/: mod.rs  time_travel.rs
crates/networking/rpc/engine/: payload.rs
crates/tokamak-bench/: Cargo.toml
crates/tokamak-bench/src/: jit_bench.rs  lib.rs  regression.rs  report.rs  runner.rs  stats.rs  types.rs
crates/tokamak-bench/src/cross_client/: mod.rs  report.rs  runner.rs  types.rs
crates/tokamak-debugger/: Cargo.toml
crates/tokamak-debugger/examples/: reentrancy_demo.rs  sentinel_dashboard_demo.rs
crates/tokamak-debugger/src/: engine.rs  error.rs  lib.rs  recorder.rs  types.rs
crates/tokamak-debugger/src/autopsy/: abi_decoder.rs  classifier.rs  enrichment.rs  fund_flow.rs  metrics.rs  mod.rs  remote_db.rs  report.rs  rpc_client.rs  types.rs
crates/tokamak-debugger/src/cli/: commands.rs  formatter.rs  mod.rs  repl.rs
crates/tokamak-debugger/src/sentinel/: alert.rs  analyzer.rs  auto_pause.rs  config.rs  history.rs  mempool_filter.rs  metrics.rs  ml_model.rs  mod.rs  pipeline.rs  pre_filter.rs  replay.rs  service.rs  tests.rs  types.rs  webhook.rs  ws_broadcaster.rs
crates/tokamak-debugger/src/tests/: autopsy_tests.rs  basic_replay.rs  cli_tests.rs  error_handling.rs  gas_tracking.rs  helpers.rs  mainnet_validation.rs  mod.rs  navigation.rs  nested_calls.rs  recorder_edge_cases.rs  serde_tests.rs  stress_tests.rs
crates/vm/tokamak-jit/: Cargo.toml  SAFETY_AUDIT.md
crates/vm/tokamak-jit/fuzz/: Cargo.toml
crates/vm/tokamak-jit/fuzz/fuzz_targets/: fuzz_analyzer.rs  fuzz_differential.rs  fuzz_optimizer.rs
crates/vm/tokamak-jit/proptest-regressions/tests/: proptest_gas.txt
crates/vm/tokamak-jit/src/: adapter.rs  backend.rs  compiler.rs  error.rs  execution.rs  host.rs  lib.rs  validation.rs
crates/vm/tokamak-jit/src/tests/: bal_recording.rs  constant_folding.rs  dual_execution.rs  fibonacci.rs  gas_alignment.rs  mod.rs  oversized.rs  precompile_fast_dispatch.rs  proptest_gas.rs  recursive_call_opt.rs  storage.rs  subcall.rs  test_helpers.rs
dashboard/: .gitignore  astro.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
docs/: CLI.md  DIRECTORY_STRUCTURE.md  PRD.md  SUMMARY.md  TASKS.md  TECH_STACK.md  geth-db-compatibility.md  lessons.md  todo.md
scripts/: build-docker-images.sh  generate-zk-dex-genesis.sh  new-guest-program.sh
tooling/: Cargo.toml
tooling/archive_sync/src/: main.rs
tooling/ef_tests/blockchain/: test_runner.rs
tooling/ef_tests/state_v2/src/modules/: block_runner.rs
tooling/geth-db-migrate/: Cargo.toml  README.md  README_kor.md
tooling/geth-db-migrate/src/: cli.rs  detect.rs  lib.rs  main.rs
tooling/geth-db-migrate/src/readers/: ancient.rs  geth_db.rs  mod.rs  pebble.rs
tooling/geth-db-migrate/src/tui/: event.rs  mod.rs  ui.rs
tooling/geth-db-migrate/src/writers/: mod.rs
tooling/geth-db-migrate/tests/: cli_integration.rs
tooling/geth2ethrex/: Cargo.toml  README.md  README_kor.md  USAGE.md
tooling/geth2ethrex/examples/: verify_migration.rs
tooling/geth2ethrex/src/: cli.rs  detect.rs  lib.rs  main.rs  utils.rs
tooling/geth2ethrex/src/readers/: geth_db.rs  mod.rs  pebble.rs
tooling/geth2ethrex/src/tui/: app.rs  event.rs  ui.rs
tooling/geth2ethrex/src/writers/: lmdb.rs
tooling/geth2ethrex/tests/: cli_integration.rs
tooling/migrations/: Cargo.toml  README.md
tooling/migrations/scripts/: check-prereqs.sh
tooling/migrations/src/: cli.rs  main.rs
tooling/migrations/tests/: cli_integration.rs
tooling/monitor/src/widget/: blocks.rs  l1_to_l2_messages.rs  l2_to_l1_messages.rs
tooling/ops-agent/: Cargo.toml  MVP_STATUS.md  README.md
tooling/ops-agent/src/: alerter.rs  collector.rs  config.rs  diagnoser.rs  lib.rs  main.rs  models.rs  service.rs  storage.rs
tooling/ops-agent/tests/: incidents_flow.rs  service_flow.rs
(+422 files in other folders)
