[package]
name = "ethrex-blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-rlp.workspace = true
ethrex-common = { workspace = true, default-features = false }
ethrex-crypto.workspace = true
ethrex-storage.workspace = true
ethrex-trie.workspace = true
ethrex-vm.workspace = true
ethrex-metrics = { path = "./metrics", default-features = false }

thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
hex.workspace = true
rustc-hash.workspace = true
tokio = { workspace = true, features = ["time", "rt", "sync", "macros"] }
tokio-util.workspace = true

[dev-dependencies]
serde_json.workspace = true
hex = "0.4.3"
tokio = { workspace = true, features = ["full"] }

[lib]
path = "./blockchain.rs"

[features]
default = ["secp256k1"]
secp256k1 = ["ethrex-common/secp256k1", "ethrex-vm/secp256k1"]
c-kzg = ["ethrex-common/c-kzg", "ethrex-vm/c-kzg"]
metrics = ["ethrex-metrics/transactions"]

[lints.clippy]
unwrap_used = "deny"
redundant_clone = "warn"
