[package]
name = "ethrex-guest-program"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_with.workspace = true
thiserror = "2.0.9"
rkyv.workspace = true
bytes.workspace = true
sha2.workspace = true

ethrex-common = { path = "../common/", default-features = false }
ethrex-crypto = { path = "../common/crypto", default-features = false }
ethrex-trie = { path = "../common/trie", default-features = false }
ethrex-vm = { path = "../vm", default-features = false }
ethrex-rlp = { path = "../common/rlp", default-features = false }
ethrex-l2-common = { path = "../l2/common", default-features = false }

[build-dependencies]
hex.workspace = true
risc0-build = { version = "=3.0.3", optional = true }
sp1-build = { version = "=5.0.8", optional = true }
sp1-sdk = { version = "=5.0.8", optional = true }

[package.metadata.risc0]
methods = ["bin/risc0"]

[features]
default = ["secp256k1"]
risc0 = ["dep:risc0-build"]
sp1 = ["dep:sp1-build", "dep:sp1-sdk"]
zisk = [
    "ethrex-common/zisk",
    "ethrex-vm/zisk",
    "ethrex-l2-common/zisk",
]
openvm = []
l2 = []
c-kzg = ["ethrex-vm/c-kzg", "ethrex-common/c-kzg"]
secp256k1 = [
    "ethrex-common/secp256k1",
    "ethrex-vm/secp256k1",
    "ethrex-l2-common/secp256k1",
]
# temporary feature until we fix cargo-zisk setup-rom from failing in the CI
ci = []

# When this feature is enabled, the cycles used in the code inside the
# report_cycles function will be reported to stdout when running inside SP1 zkVM.
sp1-cycles = []

[dev-dependencies]
tempfile.workspace = true

[lib]
path = "./src/lib.rs"
