[package]
name = "halo2-dex"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "halo2_dex"
path = "src/lib.rs"

[[bin]]
name = "halo2-dex"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "full_benchmark"
path = "src/bin/full_benchmark.rs"

[dependencies]
halo2-scaffold = { git = "https://github.com/axiom-crypto/halo2-scaffold.git", branch = "main" }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition" }
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition", default-features = false, features = ["halo2-axiom"] }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", branch = "community-edition" }
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
rand_core = "0.6"
ark-std = { version = "0.3.0", features = ["print-trace"] }
env_logger = "0.10"
log = "0.4"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
