[package]
name = "tokamak-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ethrex-levm = { workspace = true, features = ["perf_opcode_timings"] }
ethrex-vm.workspace = true
ethrex-common = { workspace = true, default-features = false }
ethrex-crypto.workspace = true
ethrex-storage.workspace = true
ethrex-blockchain.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
clap = { workspace = true, features = ["derive"] }
hex.workspace = true
bytes.workspace = true
rustc-hash.workspace = true

tokamak-jit = { path = "../vm/tokamak-jit", features = ["revmc-backend"], optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
serial_test.workspace = true
ethrex-levm = { workspace = true, features = ["test-utils"] }

[features]
default = []
jit-bench = ["dep:tokamak-jit"]
cross-client = ["dep:reqwest", "dep:tokio", "dep:url"]

[[bin]]
name = "tokamak-bench"
path = "src/bin/runner.rs"

[lints]
workspace = true
