[package]
name = "tokamak-debugger"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
cli = [
    "dep:clap",
    "dep:rustyline",
    "dep:hex",
    "dep:ethrex-storage",
    "dep:ethrex-blockchain",
    "dep:ethrex-vm",
    "dep:rustc-hash",
]
autopsy = [
    "dep:reqwest",
    "dep:sha3",
    "dep:serde_json",
    "dep:rustc-hash",
]
sentinel = [
    "dep:rustc-hash",
    "dep:hex",
    "dep:ethrex-storage",
    "dep:ethrex-blockchain",
    "dep:ethrex-vm",
    "dep:serde_json",
    "dep:toml",
    "dep:axum",
    "dep:tower-http",
    "dep:tokio",
]

[dependencies]
ethrex-levm = { workspace = true, features = ["tokamak-debugger"] }
ethrex-common = { workspace = true, default-features = false }
bytes.workspace = true
serde.workspace = true
thiserror.workspace = true

# CLI-only (optional)
clap = { workspace = true, optional = true }
rustyline = { version = "15", optional = true }
hex = { workspace = true, optional = true }
ethrex-storage = { workspace = true, optional = true }
ethrex-blockchain = { workspace = true, optional = true }
ethrex-vm = { workspace = true, optional = true }
rustc-hash = { workspace = true, optional = true }

# Autopsy-only (optional)
reqwest = { workspace = true, features = ["blocking", "json"], optional = true }
sha3 = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Sentinel config (optional)
toml = { version = "0.8", optional = true }

# Sentinel dashboard server (optional)
axum = { workspace = true, features = ["ws"], optional = true }
tower-http = { workspace = true, features = ["cors"], optional = true }
tokio = { workspace = true, features = ["full"], optional = true }

[dev-dependencies]
ethrex-storage.workspace = true
ethrex-blockchain.workspace = true
ethrex-vm.workspace = true
rustc-hash.workspace = true
serde_json.workspace = true

[[bin]]
name = "tokamak-debugger"
path = "src/bin/debugger.rs"
required-features = ["cli"]

[[example]]
name = "reentrancy_demo"
required-features = ["sentinel", "autopsy"]

[[example]]
name = "sentinel_realtime_demo"
required-features = ["sentinel"]

[[example]]
name = "sentinel_dashboard_demo"
required-features = ["sentinel"]

[lints]
workspace = true
