[package]
name = "geth-db-migrate"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[features]
default = ["tui"]
tui = ["dep:crossterm", "dep:ratatui", "dep:futures"]

[dependencies]
clap.workspace = true
crossterm = { version = "0.29.0", features = ["event-stream"], optional = true }
futures = { version = "0.3.31", optional = true }
ratatui = { version = "0.29.0", optional = true }
ethrex-common.workspace = true
ethrex-blockchain.workspace = true
ethrex-rlp.workspace = true
ethrex-storage = { features = ["rocksdb"], workspace = true }
ethrex-trie.workspace = true
eyre.workspace = true
heed = "0.20"
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
snap = "1.1.1"
thiserror.workspace = true
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { features = ["full"], workspace = true }

[dev-dependencies]
tempfile.workspace = true
