[package]
name = "geth2ethrex"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
ethrex-blockchain.workspace = true
ethrex-common.workspace = true
ethrex-common-libmdbx = { git = "https://github.com/lambdaclass/ethrex", tag = "v1.0.0", package = "ethrex-common" }
ethrex-storage-libmdbx = { features = [
    "libmdbx",
], git = "https://github.com/lambdaclass/ethrex", tag = "v1.0.0", package = "ethrex-storage" }
ethrex-storage = { features = ["rocksdb"], workspace = true }
eyre.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { features = ["full"], workspace = true }

[dev-dependencies]
tempfile.workspace = true
