[package]
name = "geth2ethrex"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[features]
default = ["tui"]
tui = ["dep:crossterm", "dep:ratatui", "dep:futures"]

[dependencies]
clap.workspace = true
crossterm = { version = "0.29.0", features = ["event-stream"], optional = true }
futures = { version = "0.3.31", optional = true }
ratatui = { version = "0.29.0", optional = true }
ethrex-blockchain.workspace = true
ethrex-common.workspace = true
ethrex-rlp.workspace = true
ethrex-common-libmdbx = { git = "https://github.com/lambdaclass/ethrex", tag = "v1.0.0", package = "ethrex-common" }
ethrex-storage-libmdbx = { features = [
    "libmdbx",
], git = "https://github.com/lambdaclass/ethrex", tag = "v1.0.0", package = "ethrex-storage" }
ethrex-storage = { features = ["rocksdb"], workspace = true }
eyre.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snap = "1.1.1"
thiserror.workspace = true
tokio = { features = ["full"], workspace = true }

[dev-dependencies]
tempfile.workspace = true
