[package]
name = "ethrex-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
bytes.workspace = true
ethereum-types.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
hex.workspace = true
thiserror.workspace = true
clap.workspace = true
kzg-rs.workspace = true
rkyv.workspace = true
bincode = "1.3.3"
anyhow = "1.0.86"
url.workspace = true
sha2.workspace = true
toml.workspace = true

# ethrex
ethrex-common.workspace = true
ethrex-storage.workspace = true
ethrex-vm.workspace = true
ethrex-rlp.workspace = true
ethrex-trie.workspace = true
ethrex-crypto.workspace = true
ethrex-blockchain.workspace = true
secp256k1.workspace = true

# l2
ethrex-l2 = { path = "../", default-features = false }
ethrex-l2-common = { workspace = true }
ethrex-sdk.workspace = true

ethrex-guest-program = { path = "../../guest-program" }

risc0-zkvm = { version = "=3.0.3", optional = true, features = ["getrandom"] }
risc0-zkp = { version = "=3.0.2", optional = true }

sp1-sdk = { version = "=5.0.8", optional = true }
sp1-prover = { version = "=5.0.8", optional = true }
sp1-recursion-gnark-ffi = { version = "=5.0.8", optional = true }

openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", package = "openvm-sdk", optional = true, features = [
    "evm-prove",
    "parallel",
] }
openvm-continuations = { git = "https://github.com/openvm-org/openvm.git", package = "openvm-continuations", optional = true }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", package = "openvm-stark-sdk", tag = "v1.2.1", optional = true }

tempfile.workspace = true

[dev-dependencies]
ethrex-storage.workspace = true

[lib]
name = "ethrex_prover_lib"
path = "src/lib.rs"

[[bin]]
name = "sp1_benchmark"
path = "src/bin/sp1_benchmark.rs"
required-features = ["sp1"]

[features]
# TODO(#2662) Prover shouldn't have l2 as a default but cargo complains about missing field in struct
default = ["l2"]
# prover backends
risc0 = [
    "ethrex-guest-program/risc0",
    "dep:risc0-zkvm",
    "dep:risc0-zkp",
    "ethrex-common/risc0",
]
sp1 = ["ethrex-guest-program/sp1", "dep:sp1-sdk", "dep:sp1-prover"]
zisk = ["ethrex-guest-program/zisk"]
openvm = [
    "ethrex-guest-program/openvm",
    "dep:openvm-sdk",
    "dep:openvm-stark-sdk",
    "dep:openvm-continuations",
]
tokamak = []
profiling = ["sp1-sdk?/profiling"]

gpu = ["risc0-zkvm?/cuda", "sp1-sdk?/cuda", "openvm-sdk?/cuda"]
l2 = ["ethrex-guest-program/l2", "ethrex-l2/l2"]

# temporary feature until we fix cargo-zisk setup-rom from failing in the CI
ci = ["ethrex-guest-program/ci"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
unnecessary_cast = "warn"
panic = "deny"
redundant_clone = "warn"
