[package]
name = "ethrex-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { features = ["ws"], workspace = true }
tower-http.workspace = true
serde.workspace = true
serde_json = "1.0.117"
tokio = { workspace = true, features = ["full"] }
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ethrex-common.workspace = true
ethrex-storage.workspace = true
ethrex-vm.workspace = true
ethrex-blockchain.workspace = true
ethrex-metrics.workspace = true
ethrex-crypto.workspace = true
ethrex-p2p = { workspace = true, features = ["test-utils"] }
ethrex-rlp.workspace = true
ethrex-trie.workspace = true
ethrex-storage-rollup = { workspace = true, optional = true }
ethrex-l2-common = { workspace = true, optional = true }
tokamak-debugger = { path = "../../tokamak-debugger", optional = true }
ethereum-types.workspace = true
hex.workspace = true
axum-extra = { version = "0.10.0", features = ["typed-header"] }
jsonwebtoken.workspace = true
rand.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
reqwest.workspace = true
sha2.workspace = true
jemalloc_pprof = { version = "0.8.0", optional = true, features = [
    "flamegraph",
    "symbolize",
] }
spawned-rt.workspace = true
spawned-concurrency.workspace = true

# Clients
envy = "0.4.2"
thiserror.workspace = true
secp256k1.workspace = true
uuid.workspace = true
hex-literal = "0.4.1"

[dev-dependencies]
hex-literal = "0.4.1"

[lib]
path = "./lib.rs"

[lints.clippy]
unwrap_used = "deny"
redundant_clone = "warn"

[features]
jemalloc_profiling = ["dep:jemalloc_pprof"]
tokamak-debugger = ["dep:tokamak-debugger"]
