[package]
name = "tokamak-desktop"
version = "0.1.0"
description = "Tokamak L2 Desktop App - AI-powered node management"
authors = ["Tokamak Network"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tokamak-network/ethrex"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tokamak_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
keyring = "3"
open = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3"
